chore: add demo for payment execution