@@ -5,12 +5,13 @@ package com.payone.commerce.platform.app;
 
 import java.io.IOException;
 import java.security.InvalidKeyException;
-import java.util.List;
+import java.util.Arrays;
 
 import com.payone.commerce.platform.lib.CommunicatorConfiguration;
 import com.payone.commerce.platform.lib.endpoints.CheckoutApiClient;
 import com.payone.commerce.platform.lib.endpoints.CommerceCaseApiClient;
 import com.payone.commerce.platform.lib.endpoints.OrderManagementCheckoutActionsApiClient;
+import com.payone.commerce.platform.lib.endpoints.PaymentExecutionApiClient;
 import com.payone.commerce.platform.lib.errors.ApiErrorResponseException;
 import com.payone.commerce.platform.lib.errors.ApiException;
 import com.payone.commerce.platform.lib.models.APIError;
@@ -26,6 +27,7 @@ import com.payone.commerce.platform.lib.models.ContactDetails;
 import com.payone.commerce.platform.lib.models.CreateCheckoutRequest;
 import com.payone.commerce.platform.lib.models.CreateCommerceCaseRequest;
 import com.payone.commerce.platform.lib.models.CreateCommerceCaseResponse;
+import com.payone.commerce.platform.lib.models.CreatePaymentResponse;
 import com.payone.commerce.platform.lib.models.Customer;
 import com.payone.commerce.platform.lib.models.DeliverRequest;
 import com.payone.commerce.platform.lib.models.DeliverResponse;
@@ -36,6 +38,8 @@ import com.payone.commerce.platform.lib.models.OrderRequest;
 import com.payone.commerce.platform.lib.models.OrderType;
 import com.payone.commerce.platform.lib.models.PatchCheckoutRequest;
 import com.payone.commerce.platform.lib.models.PaymentChannel;
+import com.payone.commerce.platform.lib.models.PaymentExecutionRequest;
+import com.payone.commerce.platform.lib.models.PaymentExecutionSpecificInput;
 import com.payone.commerce.platform.lib.models.PaymentMethodSpecificInput;
 import com.payone.commerce.platform.lib.models.PersonalInformation;
 import com.payone.commerce.platform.lib.models.PersonalName;
@@ -53,6 +57,7 @@ public class App {
     private final CommerceCaseApiClient commerceCaseClient;
     private final CheckoutApiClient checkoutClient;
     private final OrderManagementCheckoutActionsApiClient orderManagementCheckoutClient;
+    private final PaymentExecutionApiClient paymentExecutionClient;
 
     public App(String API_KEY, String API_SECRET, String MERCHANT_ID) {
         this.MERCHANT_ID = MERCHANT_ID;
@@ -61,6 +66,7 @@ public class App {
             this.commerceCaseClient = new CommerceCaseApiClient(config);
             this.checkoutClient = new CheckoutApiClient(config);
             this.orderManagementCheckoutClient = new OrderManagementCheckoutActionsApiClient(config);
+            this.paymentExecutionClient = new PaymentExecutionApiClient(config);
         } catch (InvalidKeyException e) {
             throw new RuntimeException("Expected key to be valid", e);
         }
@@ -82,6 +88,90 @@ public class App {
         }
 
         return new App(apiKey, apiSecret, merchantId);
+    }
+
+    private void runCheckoutWithPaymentExecution(String commerceCaseMerchantReference)
+            throws IOException, ApiException {
+        // Create a commerce case, add customer data, put something into the shopping
+        // cart
+        CreateCommerceCaseRequest createCommerceCaseRequest = new CreateCommerceCaseRequest();
+
+        Customer customer = new Customer();
+        PersonalInformation personalInformation = new PersonalInformation()
+                .dateOfBirth("19991112")
+                .name(new PersonalName().firstName("Ryan").surname("Carniato"));
+        ContactDetails contactDetails = new ContactDetails().emailAddress("mail@mail.com");
+        Address address = new Address()
+                .countryCode("DE")
+                .zip("24937")
+                .city("Flensburg")
+                .street("Rathausplatz")
+                .houseNumber("1");
+        customer.setPersonalInformation(personalInformation);
+        customer.setContactDetails(contactDetails);
+        customer.billingAddress(address);
+
+        CreateCheckoutRequest checkoutRequest = new CreateCheckoutRequest();
+        AmountOfMoney amountOfMoney = new AmountOfMoney()
+                .amount(3599L)
+                .currencyCode("EUR");
+        Shipping shipping = new Shipping()
+                .address(new AddressPersonal()
+                        .countryCode("DE")
+                        .zip("24937")
+                        .city("Flensburg")
+                        .street("Rathausplatz").houseNumber("1"));
+        ShoppingCartInput shoppingCart = new ShoppingCartInput();
+        CartItemInput cartItem = new CartItemInput()
+                .invoiceData(new CartItemInvoiceData()
+                        .description("T-Shirt - Scaleshape Logo - S"))
+                .orderLineDetails(new OrderLineDetailsInput()
+                        .productPrice(3599L)
+                        .quantity(1L)
+                        .productType(ProductType.GOODS));
+        shoppingCart.addItemsItem(cartItem);
+
+        checkoutRequest.amountOfMoney(amountOfMoney)
+                .shoppingCart(shoppingCart)
+                .shipping(shipping);
+
+        createCommerceCaseRequest
+                .merchantReference(commerceCaseMerchantReference)
+                .customer(customer)
+                .checkout(checkoutRequest);
+
+        CreateCommerceCaseResponse commerceCase = commerceCaseClient.createCommerceCaseRequest(
+                MERCHANT_ID,
+                createCommerceCaseRequest);
+
+        PaymentExecutionRequest paymentExecutionRequest = new PaymentExecutionRequest()
+                .paymentExecutionSpecificInput(new PaymentExecutionSpecificInput()
+                        .paymentReferences(new References().merchantReference("p-" + commerceCaseMerchantReference))
+                        .amountOfMoney(new AmountOfMoney()
+                                .amount(3599L)
+                                .currencyCode("EUR")))
+                .paymentMethodSpecificInput(new PaymentMethodSpecificInput()
+                        .sepaDirectDebitPaymentMethodSpecificInput(new SepaDirectDebitPaymentMethodSpecificInput()
+                                .paymentProductId(771)
+                                .paymentProduct771SpecificInput(new SepaDirectDebitPaymentProduct771SpecificInput()
+                                        .mandate(new ProcessingMandateInformation()
+                                                .bankAccountIban(new BankAccountInformation()
+                                                        .iban("DE75512108001245126199")
+                                                        .accountHolder("Ryan Carniato"))
+                                                .dateOfSignature("20240730")
+                                                .recurrenceType(MandateRecurrenceType.UNIQUE)
+                                                .uniqueMandateReference("m-" + commerceCaseMerchantReference)
+                                                .creditorId("DE98ZZZ09999999999")))));
+        CreatePaymentResponse paymentResponse = this.paymentExecutionClient.createPayment(MERCHANT_ID,
+                commerceCase.getCommerceCaseId().toString(),
+                commerceCase.getCheckout().getCheckoutId().toString(), paymentExecutionRequest);
+        System.out.println(paymentResponse);
+
+        CheckoutResponse finalCheckout = this.checkoutClient.getCheckoutRequest(
+                MERCHANT_ID,
+                commerceCase.getCommerceCaseId().toString(),
+                commerceCase.getCheckout().getCheckoutId().toString());
+        System.out.println(finalCheckout);
     }
 
     private void runSingleStepCheckout(String commerceCaseMerchantReference)
@@ -175,7 +265,7 @@ public class App {
                                 .houseNumber("2")))
                 .checkout(new CreateCheckoutRequest()
                         .shoppingCart(new ShoppingCartInput()
-                                .items(List.of(new CartItemInput()
+                                .items(Arrays.asList(new CartItemInput()
                                         .invoiceData(new CartItemInvoiceData()
                                                 .description("Frankenstein - Mary Shelley - Hardcover"))
                                         .orderLineDetails(new OrderLineDetailsInput()
@@ -242,6 +332,17 @@ public class App {
 
     public static void main(String[] args) {
         App app = initFromEnv();
+
+        try {
+            app.runCheckoutWithPaymentExecution("comc1a5");
+        } catch (ApiErrorResponseException e) {
+            for (APIError error : e.getErrors()) {
+                System.err.println(error.getMessage());
+            }
+            System.exit(1);
+        } catch (Exception e) {
+            throw new RuntimeException(e);
+        }
 
         try {
             app.runMultiStepCheckout("comc1a1");
